--- a/config/matry_64.yaml
+++ b/config/matry_64.yaml
@@ -10,9 +10,9 @@ model:
   
 
 train:
-  ae_resume_path:
-  loss_resume_path:
-  global_step:
+  ae_resume_path: 'experiment/matryoshka_64_newdec/vqvae-matryoshka_64_newdec-50k'
+  loss_resume_path: 'experiment/matryoshka_64_newdec/loss-matryoshka_64_newdec-50k'
+  global_step: 50000
   exp_name: &exp_name 'matryoshka_64_newdec'
   wandb_proj: *exp_name
   output_dir: *exp_name
@@ -20,9 +20,9 @@ train:
   mixed_precision: 'no'
   gradient_accumulation_steps: 4
   report_to: 'wandb'
-  num_iters: 50000
-  val_every: 100
-  save_every: 1000
+  num_iters: 80000
+  val_every: 1000
+  save_every: 2000
   disc_start: 1
   disc_weight: 0.05
 
