--- a/config/gpt_bin.yaml
+++ b/config/gpt_bin.yaml
@@ -1,4 +1,12 @@
-gpt_mode: 'bin'
+gpt:
+  mode: 'bin'
+  size: '86M'
+  n_layer: 12
+  n_head: 12
+  dim: 768
+  class_dropout_prob: 0.1
+  tokenizer_path: 'ckpts/a800/vqvae-new_decoder-266k' # to modify
+
 train:
   gpt_resume_path:
   global_step: 1
@@ -7,13 +15,12 @@ train:
   output_dir: *exp_name
   logging_dir: 'logs'
   mixed_precision: 'bf16'
-  gradient_accumulation_steps: 1
-  report_to: 'wandb'
-  num_iters: 50000
-  val_every: 1000
-  save_every: 1000
+  gradient_accumulation_steps: 1 # to modify
+  report_to: 'wandb' # modify to wandb
+  num_iters: 500000 # to modify
+  save_every: 10000 # to modify
 
 data:
-  # path: '/data/Largedata/ImageNet_wds/imagenet-train-{000000..001281}.tar'
-  path: '/data/Largedata/ImageNet_wds/imagenet-train-000004.tar'
-  batch_size: 100
+  # path: '/data/Largedata/ImageNet_wds/imagenet-train-{000000..001281}.tar' # to modify
+  path: '/data/Largedata/ImageNet_wds/imagenet-train-000004.tar' # to modify
+  batch_size: 100 # to modify
